--- a/RichCanvasDemo/MainWindow.xaml
+++ b/RichCanvasDemo/MainWindow.xaml
@@ -375,7 +375,8 @@
                     <Setter Property="ContextMenu">
                         <Setter.Value>
                             <ContextMenu>
-                                <MenuItem Header="Copy" />
+                                <MenuItem Header="Copy"
+                                          Command=""/>
                                 <MenuItem Header="Paste"
                                           IsEnabled="True" />
                             </ContextMenu>
